tests/sema/fail/v20_fail_str_add_assign.ep
# COMPILE_FAIL_CONTAINS: string += is not supported; use s = s + rhs
fun main(): void {
    let text = "a"
    text += "b"
}
